tekton-cel/require-tekton-bundle/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-tekton-bundle
policies:
- ../require-tekton-bundle.yaml
resources:
- ../.chainsaw-test/bad-pipelinerun.yaml
- ../.chainsaw-test/bad-taskrun.yaml
- ../.chainsaw-test/good-pipelinerun.yaml
- ../.chainsaw-test/good-taskrun.yaml
results:
- policy: require-tekton-bundle
  rule: check-bundle-pipelinerun
  kind: PipelineRun
  resources:
  - badpipelinerun01
  - badpipelinerun02
  result: fail
- policy: require-tekton-bundle
  rule: check-bundle-pipelinerun
  kind: PipelineRun
  resources:
  - goodpipelinerun01
  result: pass
- policy: require-tekton-bundle
  rule: check-bundle-taskrun
  kind: TaskRun
  resources:
  - badtaskrun01
  result: fail
- policy: require-tekton-bundle
  rule: check-bundle-taskrun
  kind: TaskRun
  resources:
  - goodtaskrun01
  result: pass
